--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,32 +9,32 @@
     "icons": [
         {
             "src": "images/icons/android-icon-36x36.png",
-            "type": "img/png",
+            "type": "image/png",
             "sizes": "36x36"
         },
         {
             "src": "images/icons/android-icon-48x48.png",
-            "type": "img/png",
+            "type": "image/png",
             "sizes": "48x48"
         },
         {
             "src": "images/icons/android-icon-72x72.png",
-            "type": "img/png",
+            "type": "image/png",
             "sizes": "72x72"
         },
         {
             "src": "images/icons/android-icon-96x96.png",
-            "type": "img/png",
+            "type": "image/png",
             "sizes": "96x96"
         },
         {
             "src": "images/icons/android-icon-144x144.png",
-            "type": "img/png",
+            "type": "image/png",
             "sizes": "144x144"
         },
         {
             "src": "images/icons/android-icon-192x192.png",
-            "type": "img/png",
+            "type": "image/png",
             "sizes": "192x192"
         }
     ]
