--- a/Flask_App/static/manifest.json
+++ b/Flask_App/static/manifest.json
@@ -36,6 +36,11 @@
             "src": "images/icons/android-icon-192x192.png",
             "type": "image/png",
             "sizes": "192x192"
+        },
+        {
+            "src": "images/icons/icon-512x512.png",
+            "type": "image/png",
+            "sizes": "512x512"
         }
     ]
 }
